kubern/devops303/service-devops303Redis.yml
kind: Service
apiVersion: v1
metadata:
  name: service-devops303redis
spec:
  selector:
    app: redis-devops303
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
