kubern/devops303/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world
spec:
  rules:
    - host: hello-world.voisin-sacha
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ingress-service
                port:
                  number: 80
